# ChessServerRust

./: .env  .env-docker  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: command.rs  connection_manager.rs  event_service.rs  game.rs  game_end_condition.rs  game_manager.rs  game_repository.rs  game_status.rs  http_server.rs  main.rs  request.rs  response.rs  server.rs  server2.rs  user.rs  websocket_server.rs  websocket_server_new.rs
src/chess_engine/: bishop.rs  board.rs  color.rs  coordinates.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  piece_new.rs  position.rs  queen.rs  rook.rs  square.rs
