[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
chesslib = { path = "chesslib_Rust" }
tokio-websockets = { version = "0.8.3", features = ["server", "sha1_smol"] }
