[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
tokio-websockets = { version = "0.8.3", features = ["server", "sha1_smol"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
diesel_migrations = "2.0.0"
axum = { version = "0.7.5", features = ["ws"] }
#axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }

chesslib = { path = "chesslib_Rust" }
tower = "0.4.13"
